kubernetes_https/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  name: demo-app-ingress
spec:
  rules:
  - host: nginx.c56e6787-36ad-415e-901d-e831c26c3b79.k8s.civo.com
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 8090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx.c56e6787-36ad-415e-901d-e831c26c3b79.k8s.civo.com
    secretName: demo
